...
        android:elevation="@dimen/elevation_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/navigation_tb"
            style="@style/ToolBarWithNavigationBack"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
...
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:scrollbarFadeDuration="1"
        android:paddingTop="@dimen/margin_normal"
        android:clipToPadding="false"
...
