...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="end|center">

                <ImageButton
                    android:id="@+id/save_btn"
                    style="@style/MenuImageView"
                    android:background="@drawable/item_ripple_oval_without_mask"
                    android:src="@drawable/ic_save" />

                <ImageButton
                    android:id="@+id/apply_btn"
...
