...

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/savedImagePanel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_large"
        app:cardCornerRadius="@dimen/radius16"
        app:cardElevation="@dimen/elevation_normal"
        app:layout_constraintEnd_toEndOf="parent"
...
